# cross_demo

./: .gitignore
cross01/: .gitignore  CMakeLists.txt  build_android.py  build_utils.py  build_windows.py
cross01/android/com/lebo/cross/: app.java
cross01/app/: CMakeLists.txt  app_logic.cc
cross01/app/jni/: main.c
cross01/common/: CMakeLists.txt  common.cc
cross01/xlog/: CMakeLists.txt  xlog.cc  xlog.h
sample/: CMakeLists.txt  note.txt
sample/src/: main.cc
sample/third/cross/: cross01.lib
sample/third/cross/app/: app_logic.h
sample/third/cross/common/: common.h
